<resources>
    <string name="app_name">Gastos de Viagem</string>
    <string name="distancia">Distância</string>
    <string name="preco">Preço</string>
    <string name="calcular">Calcular</string>
    <string name="total_de_Kms">Total de Quilometros</string>
    <string name="autonomia">Autonomia</string>
    <string name="seu_gasto_total">Seu gasto total será de:</string>
    <string name="preco_por_litro">Preço por Litro</string>
    <string name="kms_por_litro">Kms por Litro</string>
    <string name="valor_total_rs">R$</string>
    <string name="preencha_todos_campo">Preencha Todos os Campos</string>
    <string name="insira_numero_valido">Insira um Número Válido</string>
</resources>